# tech-blog-recom

./: .gitignore  README.md  cli.py  database.py  inspect_app.py  models.py  pyproject.toml  requirements.txt  scraper.py
scrapers/: __init__.py  all_things_distributed.py  base.py  google_research.py  kleppmann.py  lyft_engineering.py  meta_engineering.py
tests/: __init__.py
tests/scrapers/: __init__.py  test_all_things_distributed.py  test_google_research.py  test_kleppmann.py  test_lyft_engineering.py
web/: app.py
web/static/: styles.css
