[project]
name = "tech-blog-recom"
version = "0.1.0"
description = "A tool to scrape and recommend tech blog posts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "beautifulsoup4",
    "requests",
    "pandas",
    "pyarrow",
    "sentence-transformers",
    "keybert",
    "numpy",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "sqlalchemy",
    "tabulate",
    "feedparser>=6.0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "ruff>=0.11.9",
]
