[project]
name = "tech-blog-recom"
version = "0.1.0"
description = "A tool to scrape and recommend tech blog posts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
    "beautifulsoup4",
    "requests",
    "pandas",
    "pyarrow",
    "sentence-transformers",
    "keybert",
    "numpy",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "sqlalchemy",
    "tabulate",
    "feedparser>=6.0.11",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.32.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "ruff>=0.11.9",
]
